Activate GC Only using Email

--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -323,8 +323,8 @@
   }
 }
 .error-msg{
-  position: absolute;
-  bottom: -13px;
+  // position: absolute;
+  // bottom: -13px;
   text-transform: none;
   font-size: 10px ;
   font-style: italic;
