--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -493,10 +493,11 @@
 
 .euPref{
   align-items: flex-start;
-  top:90%;
+  top:50%;
   height: 565px;
   max-height: 565px;
   padding-bottom: 170px;
+  bottom: unset;
 }
 
 .close-popup {
