--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -23,6 +23,7 @@ $sale-timer-height:50px;
             min-width: 370px;
             max-width: 470px;
             background-color: #f8f8f8;
+            margin: 0 5%;
             .title {
                 @include b4_12px_montserrat_charcoal_caps();
                 color: #9f9f9f;
