Char limit and message margins

--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -78,7 +78,8 @@ $sale-timer-height:50px;
                 letter-spacing: 0.5px;
                 text-align: center;
                 line-height: 20px;
-                margin-bottom: 30px;
+                margin: 0px 20px 30px 20px;
+                word-break: break-word;
             }
             .dummy-code {
                 text-align: center;
