--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -403,6 +403,7 @@ $sale-timer-height:50px;
             width: 100%;
             z-index: 12;
             overscroll-behavior: contain;
+            overflow: auto;
             .back-to-gc-details{
                 position: sticky;
                 top: 0;
@@ -492,6 +493,7 @@ $sale-timer-height:50px;
                 text-align: center;
                 line-height: 20px;
                 margin-bottom: 30px;
+                padding: 0px 10px;
             }
             .dummy-code {
                 text-align: center;
@@ -554,7 +556,7 @@ $sale-timer-height:50px;
             position: sticky;
             bottom: 0px;
             left: 0px;
-            z-index: 7;
+            z-index: 13;
             width: 100%;
             height: 60px;
             @include b3_14px_montserrat_caps_charcoal();
