--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -1214,7 +1214,6 @@ input[type="text"]{
 .my-order-block {
   border: 1px solid #E5E5E5;
   position: relative;
-  padding: 30px;
   label {
     background-color: #ffffff;
     position: absolute;
@@ -1228,6 +1227,10 @@ input[type="text"]{
   .order-data{
     display: flex;
     justify-content: space-between;
+    padding: 30px 30px 0px 30px;
+    &.single-order{
+      padding: 30px;
+    }
     .info{
       width: 40%;
       .row{
@@ -1243,7 +1246,7 @@ input[type="text"]{
       }
     }
     .amount-paid{
-      width: 35%;
+      width: 40%;
       display: flex;
       flex-direction: column;
       text-align: left;
@@ -1261,6 +1264,7 @@ input[type="text"]{
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    padding: 0px 30px 30px 30px;
     .action{
       @include b4_12px_montserrat_charcoal_caps();
       text-decoration: underline;
@@ -1268,6 +1272,62 @@ input[type="text"]{
       &.disabled{
         color: #19191950;
         cursor: not-allowed;
+      }
+    }
+  }
+  .address-block {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #E5E5E5;
+    margin: 0 30px;
+    padding: 30px 0;
+    .address{
+      width: 40%;
+      .title{
+        font-family: $font-Montserrat;
+        font-size: 12px;
+        font-weight: $medium;
+        color: #9f9f9f;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        line-height: 20px;
+        margin-bottom: 15px;
+        text-align: left;
+      }
+      .row {
+        @include b5_10px_montserrat_charcoal();
+        letter-spacing: 0.3px;
+        line-height: 16px;
+        text-align: left;
+        &.name {
+          @include b4_12px_montserrat_charcoal();
+          font-weight: $medium;
+          line-height: 20px;
+        }
+        &.phone-number {
+          @include b4_12px_montserrat_charcoal();
+          line-height: 20px;
+          letter-spacing: 0.5px;
+        }
+      }
+    }
+  }
+  .prices{
+    background-color: #f4f4f4;
+    padding: 30px;
+    .price{
+      display: flex;
+      justify-content: space-between;
+      line-height: 40px;
+      @include b4_12px_montserrat_charcoal_caps();
+      letter-spacing: 0.5px;
+      &.discount{
+        color: $gold;
+      }
+      &.total{
+        border-top: 1px solid #e5e5e5;
+        font-weight: $semibold;
+        line-height: 50px;
       }
     }
   }
