--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -1260,25 +1260,12 @@ input[type="text"]{
       }
     }
   }
-  .actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    padding: 0px 30px 30px 30px;
-    .action{
-      @include b4_12px_montserrat_charcoal_caps();
-      text-decoration: underline;
-      text-underline-offset: 4px;
-      &.disabled{
-        color: #19191950;
-        cursor: not-allowed;
-      }
-    }
-  }
   .address-block {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid #E5E5E5;
+    border: 1px solid #E5E5E5;
+    border-left: none;
+    border-right: none;
     margin: 0 30px;
     padding: 30px 0;
     .address{
@@ -1312,6 +1299,56 @@ input[type="text"]{
       }
     }
   }
+  .product{
+    padding: 30px;
+    display: flex;
+    .image-container{
+      margin-right: 20px;
+      width: 90px;
+      img {
+        width: 100%;
+      }
+    }
+    .product-info{
+      text-align: left;
+      p{
+        margin-bottom: 10px;
+      }
+      .collection{
+        font-family: $font-Serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: #999;
+        line-height: 16px;
+      }
+      .title{
+        font-family: $font-Lora;
+        font-size: 14px;
+        color: #191919;
+        letter-spacing: 0.28px;
+        line-height: 22px;
+      }
+      .price {
+        .amount-paid{
+          @include b3_14px_montserrat_charcoal();
+          color: $gold;
+          text-transform: uppercase;
+        }
+        .original-price{
+          @include b4_12px_montserrat_charcoal();
+          color: #9f9f9f;
+          text-decoration: line-through;
+          margin-left: 8px;
+        }
+      }
+      .size, .quantity{
+        @include b5_10px_montserrat_charcoal();
+        letter-spacing: 0.5px;
+        line-height: 20px;
+      }
+    }
+  }
   .prices{
     background-color: #f4f4f4;
     padding: 30px;
@@ -1328,6 +1365,29 @@ input[type="text"]{
         border-top: 1px solid #e5e5e5;
         font-weight: $semibold;
         line-height: 50px;
+      }
+      .label{
+        .light{
+          font-size: 9px;
+          font-weight: $regular;
+          text-transform: capitalize;
+          font-style: italic;
+        }
+      }
+    }
+  }
+  .actions {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 0px 30px 30px 30px;
+    .action{
+      @include b4_12px_montserrat_charcoal_caps();
+      text-decoration: underline;
+      text-underline-offset: 4px;
+      &.disabled{
+        color: #19191950;
+        cursor: not-allowed;
       }
     }
   }
