--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -295,9 +295,6 @@ input[type="text"]{
           margin-bottom: 10px;
         }
       }
-      .block2{
-
-      }
       span {
         //text-transform: uppercase; cant use this --- it will make order status span uppercase
         //text-decoration: underline;
@@ -659,87 +656,6 @@ input[type="text"]{
 
 .hr-margin {
   margin: 15px 0;
-}
-
-.trail-track {
-  width: 220px;
-  margin-bottom: 25px;
-  margin-left: 25px;
-  @media screen and (max-width: 992px){
-    margin-left:10px;
-  }
-  .txt-right {
-    position: absolute;
-    left: 110%;
-    top: 7px;
-    font-size: 11px;
-    display: inline-flex;
-    width: 100%;
-    align-items: center;
-    img {
-      padding-right: 0 !important;
-    }
-  }
-  .cerisehr{
-    background-color: $cerise;
-    width: 1px;
-  }
-    hr {
-      width: 1px;
-      height: 50px;
-      background-color: tint(#000,70%);
-      margin: 0 auto;
-      border:0px;
-    }
-      hr {
-        &.cerise {
-          background-color: $cerise;
-
-        }
-    }
-      .main-block {
-        position: relative;
-        height: 100px;
-        margin-left: 30px;
-        &.active{
-          border-left: 1px solid $aqua;
-        }
-        &.inactive{
-          border-left: 1px solid $lightest-charcoal;
-        }
-        &.delivered{
-          height: 30px;
-        }
-        .circle{
-          height: 18px;
-          width: 18px;
-          border-radius: 100%;
-          position: absolute;
-          left:-9px;
-          top:-9px;
-          &.active{
-            background-color: $aqua;
-            border: 1px solid $aqua;
-          }
-          &.inactive{
-            background-color: $white;
-            border: 1px solid lightgray;
-          }
-        }
-        .text-block{
-          margin-left: 35px;
-          transform: translateY(-12px);
-          position: relative;
-          .live-location{
-            @include b5_10px_montserrat_charcoal();
-            letter-spacing: 0.5px;;
-            display: flex;
-          }
-          .data{
-            font-weight: 400;
-          }
-        }
-      }
 }
 
 @media screen and (max-width: 992px) {
@@ -1257,6 +1173,101 @@ input[type="text"]{
       .data{
         @include b4_12px_montserrat_semibold_charcoal();
         text-transform: uppercase;
+      }
+    }
+  }
+  .trail-track {
+    width: 100%;
+    margin: 30px 30px 0 30px;
+    padding: 25px 0 0 0;
+    border-top: 1px solid #E5E5E5;
+    @media screen and (max-width: 992px){
+      margin-left:10px;
+    }
+    .txt-right {
+      position: absolute;
+      left: 110%;
+      top: 7px;
+      font-size: 11px;
+      display: inline-flex;
+      width: 100%;
+      align-items: center;
+      img {
+        padding-right: 0 !important;
+      }
+    }
+    .cerisehr{
+      background-color: $cerise;
+      width: 1px;
+    }
+    hr {
+      width: 1px;
+      height: 50px;
+      background-color: tint(#000,70%);
+      margin: 0 auto;
+      border:0px;
+    }
+    hr {
+      &.cerise {
+        background-color: $cerise;
+
+      }
+    }
+    .main-block {
+      position: relative;
+      height: 75px;
+      margin-left: 30px;
+      text-align: left;
+      &.active{
+        border-left: 1px solid $aqua;
+      }
+      &.inactive{
+        border-left: 1px solid $lightest-charcoal;
+      }
+      &.delivered{
+        height: 30px;
+      }
+      .circle{
+        height: 18px;
+        width: 18px;
+        border-radius: 100%;
+        position: absolute;
+        left:-9px;
+        top:-9px;
+        &.active{
+          background-color: $aqua;
+          border: 1px solid $aqua;
+        }
+        &.inactive{
+          background-color: $white;
+          border: 1px solid lightgray;
+        }
+      }
+      .text-block{
+        margin-left: 35px;
+        transform: translateY(-12px);
+        position: relative;
+        .live-location{
+          @include b5_10px_montserrat_charcoal();
+          letter-spacing: 0.5px;;
+        }
+        .date{
+          font-family: $font-Montserrat;
+          font-size: 12px;
+          font-weight: $semibold;
+          letter-spacing: 0.5px;
+          line-height: 20px;
+          color: #191919;
+          font-weight: $regular;
+        }
+        .text {
+          font-family: $font-Montserrat;
+          font-size: 12px;
+          font-weight: $semibold;
+          letter-spacing: 0.5px;
+          line-height: 20px;
+          color: #191919;
+        }
       }
     }
   }
