--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1862,6 +1862,7 @@ ul.inner-menu-mobile {
 .icon-cross {
   font-size: 10px;
   margin: 9px 3px 0px 5px;
+  color: #9F9F9F;
 }
 .trendingcat {
   font-family: "Montserrat", "sans-serif";
