--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -34,7 +34,7 @@ $banner-mobile-height:180px;
         .container{
             display: flex;
             align-items: flex-start;
-            justify-content: space-between;
+            justify-content: space-around;
             min-width: 991px;
             margin-top: 70px;
             .preview-gc{
@@ -126,8 +126,8 @@ $banner-mobile-height:180px;
             }
     
             .form-gc{
-                min-width: 370px;
-                max-width: 470px;
+                min-width: 366px;
+                max-width: 370px;
                 .form-header{
                     @include h2_24px_lora_charcoal();
                     letter-spacing: 0.5px;
@@ -443,6 +443,7 @@ $banner-mobile-height:180px;
                 }
                 .form-gc{
                     padding: 35px 20px 0px 20px;
+                    max-width: 100%;
                     .card-design {
                         .designs-container{
                             .img-options{
