--- a/src/containers/newGiftcard/styles.scss
+++ b/src/containers/newGiftcard/styles.scss
@@ -114,6 +114,7 @@ $banner-mobile-height:180px;
                         line-height: 50px;
                         width: 200px;
                         border: 1px dashed #9f9f9f;
+                        box-sizing: content-box;
                     }
                 }
                 .note{
@@ -209,6 +210,7 @@ $banner-mobile-height:180px;
                             line-height: 50px;
                             border: 1px solid #f2f2f2;
                             text-align: center;
+                            cursor: pointer;
                             &.selected{
                                 color: #3C7979;
                                 border: 1px solid #3c7979;
@@ -296,7 +298,7 @@ $banner-mobile-height:180px;
                                 margin-bottom: 40px;
                                 label{
                                     @include b5_10px_montserrat_charcoal();
-                                    letter-spacing: 0.5px;
+                                    letter-spacing: 0.3px;
                                     padding: 0px 0px 0px 30px;
                                     position: relative;
                                     top: unset;
@@ -575,6 +577,7 @@ $banner-mobile-height:180px;
                     line-height: 50px;
                     width: 200px;
                     border: 1px dashed #9f9f9f;
+                    box-sizing: content-box;
                 }
             }
             .note{
