--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -69,6 +69,12 @@ ol {
     margin-left: 12px;
   }
 }
+.cookie{
+  @include b4_12px_medium_gold_caps();
+  font-weight: 600 ;
+  padding: 20px 40px 20px 0px;
+  cursor: pointer;
+}
 
 }
 .table {
