Checkbox Height Fix

--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -627,6 +627,7 @@ hr {
   position: relative;
   width: 40px;
   cursor: pointer;
+  height: 50px;
   .outer{
     position: absolute;
     top: 50%;
