--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -180,6 +180,12 @@ a {
 .cerise-background {
   background-color: $cerise !important;
 }
+.grey-background{
+  background-color: $light-charcoal !important;
+}
+.grey-color{
+  color: $light-charcoal !important;
+}
 .ceriseDisabled {
   color: tint(#000,80%) !important;
 }
