--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -59,4 +59,12 @@ $banner-mobile-height:500px;
             }
         }
     }
+    .page-body{
+        margin-top: 77px;
+        min-width: 991px;
+        display: flex;
+        .locations-container{
+
+        }
+    }
 }
