--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1716,10 +1716,11 @@ ul.inner-menu-mobile {
   justify-content: center;
   height: 100%;
   align-items: center;
-  padding: 13px 31px 14px 31px;
+  padding: 14px 31px 14px 31px;
+  max-height: 40px;
 
   @media (max-width:992px) {
-    padding: 8px 28px 20px 28px;
+    padding: 10px 28px 10px 28px;
   }
 }
 
