background color change

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -734,7 +734,7 @@ width: 100%;
 max-height: 40px;
 text-align: center;
 font-size: 10px;
-background-color: $summerGreen;
+background-color: $white;
 // padding: 13px 31px 14px 31px;
 // display: flex;
 z-index: 10;
