--- a/src/containers/customer/styles.scss
+++ b/src/containers/customer/styles.scss
@@ -4,9 +4,10 @@
 .heading {
   text-transform: uppercase;
   color: tint(#000, 40%);
-  letter-spacing: 1px;
-  font-size: 14px;
-  line-height: 48px;
+  letter-spacing: 0.5px;
+  // font-size: 14px;
+  line-height: 50px;
+  @include b3_14px_montserrat_caps_charcoal();
   .icon {
     font-size: 18px;
     color: $cerise;
@@ -28,7 +29,7 @@
         @include b4_12px_montserrat_charcoal();
         cursor: pointer;
         &:hover {
-          color: $cerise;
+          color: $gold;
           text-decoration: none;
         }
       }
@@ -220,6 +221,7 @@
               1px -100px 10px #EAEAEA,
               1px 100px 10px #eaeaea;
   height: 100vh;
+  margin-top: 40px;
 }
 
 .secondary-header-text {
