--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -135,6 +135,10 @@ a {
   margin-bottom: 30px;
 }
 
+.margin-b-50 {
+  margin-bottom: 50px;
+}
+
 .error-msg {
   &.error-radio {
     position: absolute;
@@ -428,12 +432,27 @@ font-weight: bold;
   padding-bottom: 20px;
 }
 
+.paddBottom-10 {
+  padding-bottom: 10px;
+}
+.paddBottom-50 {
+  padding-bottom: 50px;
+}
 .paddLeft-10 {
   padding-left: 10px;
 }
-
+.paddRight-70 {
+  padding-right: 70px;
+}
+.paddLeft-70 {
+  padding-left: 70px;
+}
 .paddTop-20 {
   padding-top: 20px;
+}
+
+.paddTop-50 {
+  padding-top: 50px;
 }
 
 .paddTop-10 {
