--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1714,11 +1714,12 @@ ul.inner-menu-mobile {
 .announcement-container {
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: 40px;
   align-items: center;
   padding: 14px 31px 14px 31px;
-  max-height: 40px;
-
+  z-index: 1;
+  position: relative;
+  
   @media (max-width:992px) {
     padding: 10px 28px 10px 28px;
   }
