Image Slider image position fix

--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -175,8 +175,9 @@ $banner-mobile-height:500px;
                         width: 530px;
                         position: relative;
                         img{
-                            max-height: 100%;
-                            max-width: 100%;
+                            height: 100%;
+                            width: 100%;
+                            object-fit: contain;
                             margin: auto; 
                             position: absolute;
                             top: 50%;
