--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -49,40 +49,43 @@
 .login-form {
   input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="date"], select, textarea {
     background-color: #fff;
-    border: 1px solid #eee;
+    border: 1px solid #D8D8D8;
     width: 100%;
-    padding: 10px;
-    font-size: 14px;
+    padding: 10px 20px;
     line-height: 25px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     border-radius: 0;
+    @include b4_12px_montserrat_charcoal();
+    line-height: 20px;
+    letter-spacing: 0.36px;
+    height: 50px;
     @include placeholder {
-      font-size: 14px;
+      @include b4_12px_montserrat_charcoal();
       color: $formLabel;
+      line-height: 20px;
+      letter-spacing: 0.36px;
       font-style: normal;
-      letter-spacing: 1px;
-      font-family: $font-Lato;
     }
     text-align: start;
     &:active, &:focus {
       background-color: #fff;
-      border: 1px solid #eee;
+      border: 1px solid #d8d8d8;
       width: 100%;
-      padding: 10px;
-      font-size: 14px;
-      line-height: 25px;
+      padding: 10px 20px;
+      font-size: 12px;
+      line-height: 20px;
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
       border-radius: 0;
       @include placeholder {
-        font-size: 14px;
-        color: tint(#000, 60%);
+        @include b4_12px_montserrat_charcoal();
+        color: $formLabel;
+        line-height: 20px;
+        letter-spacing: 0.36px;
         font-style: normal;
-        letter-spacing: 1px;
-        font-family: $font-Lato;
       }
       text-align: start;
     }
@@ -119,12 +122,13 @@
     position: absolute;
     top: -10px;
     left: 10px;
-    font-weight: 100;
-    font-size: 10px;
-    color: $formLabel;
-    letter-spacing: 0.5px;
     background-color: #fff;
     padding: 3px;
+    letter-spacing: 0.5px;
+    font-family: $font-Montserrat;
+    font-size: 9px;
+    font-weight: $light;
+    color: $charcoal19;
   }
   div.categorylabel > div {
     position: relative;
