annoncment top issue solved

--- a/src/components/Cushion/styles.scss
+++ b/src/components/Cushion/styles.scss
@@ -268,7 +268,7 @@
     display: -webkit-flex;
     display: flex;
     cursor: default;
-    margin-top: 30px;
+    // margin-top: 30px;
 }
 
 .message {
