--- a/src/containers/myAccount/styles.scss
+++ b/src/containers/myAccount/styles.scss
@@ -10,6 +10,14 @@ input[type="password"]{
   height: 50px !important;
 }
 
+.container-start-timer{
+  margin-top: 90px;
+}
+
+.container-start{
+  margin-top: 50px;
+}
+
 .heading {
   @include b4_12px_montserrat_charcoal_caps();
   letter-spacing: 0.5px;
