In Shop orders closed

--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -1416,6 +1416,10 @@ input[type="text"]{
       &.disabled{
         color: #19191950;
         cursor: not-allowed;
+        *{
+          color: #19191950;
+          cursor: not-allowed;
+        }
       }
       &:hover{
         color: $gold;
