--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -1193,7 +1193,7 @@ input[type="text"]{
   .trail-track {
     width: 100%;
     margin: 30px 30px 0 30px;
-    padding: 25px 0 0 0;
+    padding: 30px 0 25px 0;
     border-top: 1px solid #E5E5E5;
     @media screen and (max-width: 992px){
       margin-left:10px;
