--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -45,7 +45,7 @@
   margin-top: $header-height + $secondary-header-height;
 }
 .page-body-timer {
-  margin-top: $header-height + $timer-height;
+  margin-top: $header-height + $timer-height + 20px;
 }
 .page-body-tab {
   margin-top: $header-height;
