Cafe Heading Padding Fix

--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -285,7 +285,8 @@ $banner-mobile-height:500px;
 
 .cafe-header{
     position: relative;
-    padding-left: 50px;
+    padding-left: 60px;
+    padding-right: 20px;
     width: 100%;
     .icon{
         position: absolute;
