--- a/src/components/header/announcementBarSlider.css
+++ b/src/components/header/announcementBarSlider.css
@@ -11,12 +11,13 @@
 
 .announcementbarSliderContainer .slick-slider .slick-dots{
     display: flex !important;
-    justify-content: center;
+    position: absolute;
+    /* justify-content: center; */
     align-items: center;
-    top: 48%;
+    top: 50%;
     left: 55px;
     bottom: auto;
-    width: auto;
+    width: fit-content;
     gap: 5px;
     transform: translateY(-50%);
 }
