--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -31,6 +31,9 @@
   letter-spacing: 0.36px;
   margin-top: 10px;
   margin-bottom: 48px;
+  @media screen and (max-width:991px){
+    padding: 0px 36px;
+  }
 }
 
 .disabled-input {
