--- a/src/components/signin/styles.scss
+++ b/src/components/signin/styles.scss
@@ -130,6 +130,9 @@ input[type="checkbox"]:checked + label {
   text-decoration: underline;
   text-underline-offset: 4px;
   letter-spacing: 0.3px;
+  &:hover{
+    color: #3C7979;
+  }
 }
 
 .password-validation {
@@ -145,18 +148,21 @@ input[type="checkbox"]:checked + label {
     margin-top: -10px !important;
   }
   p {
-    text-align: left;
-    font-size: 13px;
+    @include b4_12px_montserrat_charcoal();
     line-height: 20px;
+    letter-spacing: 0.36px;
+    text-align: left;
   }
   ul {
-    font-size: 13px;
+    font-family: $font-Montserrat;
+    font-size: 10px;
+    letter-spacing: 0.3px;
     display: flex;
     flex-wrap: wrap;
-    padding-top: 10px;
+    padding-top: 12px;
     li {
       flex: 50%;
-      line-height: 24px;
+      line-height: 20px;
       text-align: left;
       &::before {
         content: '';
