alignment fixed for contact number field

--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -110,6 +110,9 @@
     flex: 3 1 0;
     border-left: 0px;
     position: relative;
+    input{
+      height: 50px !important;
+    }
   }
   .contact-code {
     flex: 1 1 0;
