--- a/src/components/Address/styles.scss
+++ b/src/components/Address/styles.scss
@@ -577,6 +577,9 @@
       font-size: 12px;
     }
   }
+  input[type="number"]{
+    height: 50px !important;
+  }
   select{
     font-size: 12px !important;
   }
