--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -369,7 +369,7 @@
           font-size: 14px;
           color: #191919;
           letter-spacing: 0.28px;
-          line-height: 22px;
+          line-height: 20px;
         }
         .price {
           .amount-paid{
@@ -390,6 +390,11 @@
           @include b5_10px_montserrat_charcoal();
           letter-spacing: 0.5px;
           line-height: 20px;
+          &.with-data{
+            span{
+                font-weight: $medium;
+            }
+          }
         }
       }
     }
@@ -401,14 +406,27 @@
         justify-content: space-between;
         line-height: 40px;
         @include b4_12px_montserrat_charcoal_caps();
+        font-weight: $medium;
         letter-spacing: 0.5px;
+        &.title{
+            font-weight: $regular;
+        }
         &.discount{
           color: $gold;
         }
         &.total{
-          border-top: 1px solid #e5e5e5;
           font-weight: $semibold;
           line-height: 50px;
+        }
+        &.line{
+            &:nth-child(2){
+                border-top: 1px solid #e5e5e5;
+                padding-top: 10px;
+            }
+            &:nth-last-child(2){
+                border-bottom: 1px solid #e5e5e5;
+                padding-bottom: 10px;
+            }
         }
         .label{
           .light{
@@ -420,26 +438,7 @@
         }
       }
     }
-    .actions {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-      padding: 0px 30px 30px 30px;
-      .action{
-        @include b4_12px_montserrat_charcoal_caps();
-        text-decoration: underline;
-        text-underline-offset: 4px;
-        &.disabled{
-          color: #19191950;
-          cursor: not-allowed;
-          *{
-            color: #19191950;
-            cursor: not-allowed;
-          }
-        }
-        &:hover{
-          color: $gold;
-        }
-      }
+    .continue-shopping{
+        padding: 20px 60px;
     }
 }
