--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -307,8 +307,14 @@
       border-right: none;
       margin: 0 30px;
       padding: 30px 0;
+      @media screen and (max-width:991px){
+        flex-direction: column;
+      }
       .address{
         width: 40%;
+        @media screen and (max-width:991px){
+            margin-bottom: 30px;
+        }
         .title{
           font-family: $font-Montserrat;
           font-size: 12px;
